[gd_scene load_steps=3 format=2]

[ext_resource path="res://list.gd" type="Script" id=1]
[ext_resource path="res://MinimalUI/MinimalUI.tres" type="Theme" id=2]

[node name="list" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonSelect" type="Button" parent="."]
margin_left = 434.0
margin_top = 317.0
margin_right = 511.0
margin_bottom = 359.0
theme = ExtResource( 2 )
text = " REFRESH "

[node name="return" type="Button" parent="."]
margin_left = 434.0
margin_top = 363.0
margin_right = 523.0
margin_bottom = 405.0
theme = ExtResource( 2 )
text = "  RETURN  "

[node name="ShowData" type="TextEdit" parent="."]
margin_left = 157.0
margin_top = 77.0
margin_right = 849.0
margin_bottom = 259.0
theme = ExtResource( 2 )

[connection signal="pressed" from="ButtonSelect" to="." method="_on_ButtonSelect_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
